# todo

./: .gitignore
backend/: DEVELOPMENT_GUIDE.md  TODO.md  pyproject.toml
backend/todo/: settings.py  urls.py
backend/todos/: admin.py  models.py  serializers.py  urls.py  views.py
backend/todos/migrations/: 0001_initial.py  0002_todo_hidden_alter_todo_title.py
