[project]
name = "backend"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django>=5.2.8",
    "djangorestframework>=3.16.1",
    "django-cors-headers>=4.9.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "black>=25.11.0",
    "pylint>=4.0.3",
]